# board-studio

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  wrangler.toml
.claude/: CLAUDE.md
.claude/agents/: architecture-critic.md  cam-engineer.md  io-engineer.md  kernel-engineer.md  legacy-spec-extractor.md  render-engineer.md  store-engineer.md  test-engineer.md  ux-engineer.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-pages.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: app.spec.ts  export.spec.ts
apps/web/public/: _headers  robots.txt
apps/web/src/: App.test.tsx  App.tsx  CommandPalette.test.tsx  CommandPalette.tsx  ConstructionPanel.tsx  ControlPointInspector.test.tsx  ControlPointInspector.tsx  CrossSectionControls.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  Sidebar.tsx  file-io.ts  fins.ts  format.ts  funboard.brd  index.css  longboard.brd  main.tsx  marketing.css  routes.tsx  sample-board.brd  settings.test.ts  settings.ts  store.ts  support.ts  templates.ts  (+5 more)
docs/design/: specs-worker.md
docs/specs/: ARCHITECTURE.mmd  ASSESSMENT.md  divergences.md  junction-constraints.md  kernel-interp.md
tools/golden-exporter/: build.gradle  settings.gradle
(+21 files in other folders)
