[package]
name = "board-studio-desktop"
version = "0.1.0"
description = "Board Studio desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "board_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
